<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.Details">


    <!--  CardsViews__________________________________ -->
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            app:cardElevation="20dp"
            app:cardCornerRadius="5dp"
            android:id="@+id/cardView1"

            app:cardBackgroundColor="@color/cardview_light_background">


        <LinearLayout
                android:id="@+id/layoutdados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_margin="5dp"
                android:orientation="horizontal">

            <LinearLayout
                    android:id="@+id/layoutLabels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="30dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/Shipname"
                        android:textAlignment="textStart"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/cost"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/lenght"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/crew"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/passengers"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/cargo_capacity"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/consumables"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/starship_class"
                        android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/layoutValores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="30dp"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/textViewValorSapaceShipName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text=""
                        android:textAlignment="center"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/textViewValorPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text=""
                        android:textAlignment="center"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/textViewValorLenght"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text=""
                        android:textStyle="bold"/>
                <TextView
                        android:id="@+id/textViewValorCrew"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text=""
                        android:textStyle="bold"/>
                <TextView
                        android:id="@+id/textViewValorPassangers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text=""
                        android:textStyle="bold"/>
                <TextView
                        android:id="@+id/textViewValorCargo_capacity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text=""
                        android:textStyle="bold"/>
                <TextView
                        android:id="@+id/textViewValorConsumables"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text=""
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/textViewValorStarship_class"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text=""
                        android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>